<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/input_layout_height"
    android:layout_gravity="bottom"
    android:background="@color/colorPrimaryDark"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/input_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/input_margin"
    tools:context=".presentation.view.activity.MainActivity">

    <EditText
        android:id="@+id/input_edit_text"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:hint="@string/input_hint"
        android:inputType="text"
        android:textColor="@android:color/secondary_text_dark"
        android:textColorHint="@android:color/tertiary_text_dark"
        android:imeOptions="actionSend"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_send"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/input_margin"
        android:layout_marginStart="@dimen/input_margin"
        android:src="@drawable/ic_action_content_send" />

</LinearLayout>
